--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -27,7 +27,7 @@ $(document).ready(function(){
             <div class="table-title">
                 <div class="row">
                     <div class="col-sm-5">
-                        <h2>Property <b>Management</b></h2>
+                        <h2>Property <b>Manager</b></h2>
                     </div>
                     <div class="col-sm-7">
                         <a href="#" class="btn btn-secondary"><i class="material-icons">&#xE147;</i> <span id="del">Add New Property</span></a>
