--- a/frontend/login.html
+++ b/frontend/login.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-<script src="scripts/login.js"></script>
-<link rel="stylesheet" href="styles/login.css">
+  <meta charset="UTF-8">
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="scripts/login.js"></script>
+  <link rel="stylesheet" href="styles/login.css">
 </head>
 <body class="page">
     <div  class="login-page">
@@ -18,9 +19,9 @@
             <p class="message">Ya registrado? <a href="#">Login</a></p>
           </form>
           <form class="login-form">
-            <input type="text" placeholder="usuario"/>
-            <input type="password" placeholder="contraseña"/>
-            <button>login</button>
+            <input id="mail" type="text" placeholder="email"/>
+            <input id="password" type="password" placeholder="password"/>
+            <button id="login-btn">login</button>
             <p class="message">No esta registrado? <a href="#">Crear una cuenta</a></p>
           </form>
         </div>
