--- a/frontend/profile.html
+++ b/frontend/profile.html
@@ -6,26 +6,31 @@
     <link rel="stylesheet" href="styles/profile.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-    <script src="scripts/profile.js"></script> 
 </head>
 <body>
-    <p>Aquí podrás ver algunas estadísticas sobre tu propiedad :)</p>
+    <p>Some statisctics</p>
     <div class="Statistics">
         <table>
             <tr id="name">
-                <th>Propiedad</th>
+                <th>Property</th>
             </tr>
             <tr id="publicationDate">
-                <th>Fecha de Publicación</th>
+                <th>Published date</th>
             </tr>
             <tr id="visits">
-                <th>Visitas</th>
+                <th>Likes</th>
             </tr>
             <tr id="daysOnline">
-                <th>Días enlistada</th>
+                <th>Days</th>
+            </tr>
+            <tr id="a">
+              <th>Views</th>
+            </tr>
+            <tr id="b">
+              <th>Questions</th>
             </tr>
         </table>
     </div>
+    <script src="scripts/profile.js"></script> 
 </body>
 </html>
