--- a/lahaus_api/public/admin.html
+++ b/lahaus_api/public/admin.html
@@ -27,10 +27,10 @@ $(document).ready(function(){
             <div class="table-title">
                 <div class="row">
                     <div class="col-sm-5">
-                        <h2>Property <b>Manager</b></h2>
+                        <h2 class="title"></h2>
                     </div>
                     <div class="col-sm-7">
-                        <a href="#" class="btn btn-secondary"><i class="material-icons">&#xE147;</i> <span id="del">Add New Property</span></a>
+                        
                     </div>
                 </div>
             </div>
@@ -38,12 +38,11 @@ $(document).ready(function(){
                 <thead>
                     <tr>
                         <th>Id</th>
-                        <th>Type</th>
-                        <th>City</th>
-                        <th>Published at</th>
-                        <th>Neighborhood</th>
-                        <th>Status</th>
-                        <th>Action</th>
+                        <th>Tipo</th>
+                        <th>Ciudad</th>
+                        <th>Publicada en</th>
+                        <th>Barrio</th>
+                        <th>Acción</th>
                     </tr>
                 </thead>
                 <tbody id="property">
@@ -51,15 +50,15 @@ $(document).ready(function(){
                 </tbody>
             </table>
             <div class="clearfix">
-                <div class="hint-text">Showing <b>5</b> out of <b>25</b> entries</div>
+                <div class="hint-text">Mostrando <b>5</b> de <b>25</b> entradas</div>
                 <ul class="pagination">
-                    <li class="page-item disabled"><a href="#">Previous</a></li>
+                    <li class="page-item disabled"><a href="#">Anterior</a></li>
                     <li class="page-item"><a href="#" class="page-link">1</a></li>
                     <li class="page-item"><a href="#" class="page-link">2</a></li>
                     <li class="page-item active"><a href="#" class="page-link">3</a></li>
                     <li class="page-item"><a href="#" class="page-link">4</a></li>
                     <li class="page-item"><a href="#" class="page-link">5</a></li>
-                    <li class="page-item"><a href="#" class="page-link">Next</a></li>
+                    <li class="page-item"><a href="#" class="page-link">Siguiente</a></li>
                 </ul>
             </div>
         </div>
